--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^33.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -18,11 +19,12 @@
     "react-navigation-material-bottom-tabs": "^1.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^5.1.1",
+    "gh-pages": "^2.0.1"
   },
   "rnpm": {
     "assets": [
-      "./assets" 
+      "./assets"
     ]
   },
   "private": true
