--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-navigation-material-bottom-tabs": "^1.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1",
-    "gh-pages": "^2.0.1"
+    "babel-preset-expo": "^5.1.1"
   },
   "rnpm": {
     "assets": [
